<resources>
    <string name="app_name">Viber</string>
    <string name="txt_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="txt_forgot_pass">Forgot password?</string>
    <string name="txt_no_account">Don\'t have an account ?</string>
    <string name="txt_register">Register</string>
    <string name="hint_user">User</string>
    <string name="menu_canhan">Cá nhân</string>
    <string name="menu_library">Thư viện</string>
    <string name="menu_chart">viberchart</string>
    <string name="menu_explore">Khám phá</string>
    <string name="txt_alert">Hãy cấp quyền truy cập để lấy ds bài hát</string>
    <string name="confirm_password">Confirm password</string>
    <string name="menu_download">Tải xuống</string>
    <string name="menu_add_to_library">Thêm vào thư viện</string>
    <string name="menu_add_to_playlist">Thêm vào playlist</string>
    <string name="menu_add_to_queue">Thêm vào hàng chờ</string>
    <string name="menu_block">Chặn bài hát</string>
    <string name="menu_similar">Phát các bài hát có nội dung tương tự</string>
    <string name="search">Search</string>
    <string name="hot">Thịnh hành</string>
    <string name="discovery">Khám phá</string>
    <string name="foryou">Đề xuất cho bạn</string>
    <string name="hot_music_playlist">Nhạc hot thịnh hành</string>
    <string name="tenbaihat">Tên bài hát</string>
    <string name="tencasi">Tên ca sĩ</string>
    <string name="playlist_theo_ca_s">Playlist theo ca sĩ</string>
    <string name="playlist_theo_th_lo_i">Playlist theo thể loại</string>
    <string name="playlist_name">Playlist_Name</string>
    <string name="danh_s_ch_b_i_h_t">Danh sách bài hát</string>
    <string name="c_c_s_ki_n_n_i_b_t">Các sự kiện nổi bật</string>
</resources>